# zpevnik

./: .dockerignore  .gitignore  CONTRIBUTING.md  HANDOVER.md  LICENSE  README.md  docker-compose.yml  zpevnik-spec.md
.github/: pull_request_template.md
app/: .gitignore  Dockerfile  README.md  app.json  eas.json  eslint.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
pipeline/: Dockerfile  README.md  pyproject.toml
pipeline/profiles/: zpevnik-2019.yaml
pipeline/tests/: test_align.py  test_chord_notation.py  test_chordpro_emit.py  test_classify.py  test_cli_run.py  test_layout.py  test_musicxml.py  test_normalize.py  test_ocr.py  test_profile.py  test_rasterize.py  test_review_melody.py  test_review_server.py  test_sections.py  test_segment.py  test_staves.py  test_writer.py
pipeline/zpevnik_pipeline/: __init__.py  cli.py  config.py  manifest.py  models.py
pipeline/zpevnik_pipeline/extract/: __init__.py  classify.py  hashing.py  normalize.py  rasterize.py
pipeline/zpevnik_pipeline/musicxml/: __init__.py  convert.py  extra_verses.py  parser.py
pipeline/zpevnik_pipeline/output/: __init__.py  chordpro.py  sections.py  slug.py  staves.py  writer.py
pipeline/zpevnik_pipeline/parse/: __init__.py  align.py  chord_notation.py  layout.py  ocr.py  segment.py
pipeline/zpevnik_pipeline/review/: __init__.py  __main__.py  server.py
pipeline/zpevnik_pipeline/review/static/: app.js  assemble.js  chord.js  chordpro.js  index.html  style.css
schema/: README.md  index.schema.json  meta.schema.json  (+1 more)
(+5344 files in other folders)
