[project]
name = "zpevnik-pipeline"
version = "0.1.0"
description = "PDF songbook → ChordPro + cropped staff PNGs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ondrej Maxa" }]
dependencies = [
    "pymupdf>=1.24",
    "pdfplumber>=0.11.0",
    "opencv-python>=4.10",
    "pytesseract>=0.3.13",
    "Pillow>=10.4",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]
review = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
zpevnik = "zpevnik_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zpevnik_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
